--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
-
+Guilherme Borges da Silva Guimarães 2D
 header {
     border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
